--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,14 @@ services:
       - "3306:3306"
     volumes:
       - mysql_db_data:/var/lib/mysql
+  pdns-server:
+    image: powerdns/pdns-auth-49:4.9.6
+    ports:
+      - "53:53/udp"
+      - "8081:8081"
+    volumes:
+      - ./docker/pdns/etc/powerdns/pdns.d/dev.conf:/etc/powerdns/pdns.d/dev.conf:ro
+
 volumes:
   pg_db_data:
   mysql_db_data:
